--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,9 @@ dev = [
   "pytest-mock>=3.12",
   "ipython>=8.17",
   "jupyter>=1.0",
-  "memory-profiler>=0.61"
+  "memory-profiler>=0.61",
+  "sphinx>=7.2",
+  "myst-parser>=2.0"
 ]
 
 [project.scripts]
@@ -66,6 +68,6 @@ where = ["src"]
 [tool.flake8]
 max-line-length = 100
 extend-ignore = ["W503", "W504"]
-per-file-ignores = {
-  "src/simulacra/utils/__init__.py" = "F401"
-}
+
+[tool.flake8.per-file-ignores]
+"src/simulacra/utils/__init__.py" = "F401"
